# parquet-writing-experiment

./: CLAUDE.md  Cargo.toml  Dockerfile.duckdb  README.md  clickhouse_bloom_test.py  clickhouse_performance_test.py  create_parquet.py  main.py  map_parquet.py  pyproject.toml  test_clickhouse.py  test_spark_bloom.py  verify_bloom_filter.py  verify_identical_data.py
src/: bloom_test.rs  bloom_writer.rs  data_generator.rs  generator.rs  generator_no_bloom.rs  main.rs  parquet_writer.rs  verify_bloom.rs
src/cmd/map_parquet/: main.rs
