[package]
name = "parquet-bloom-writer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "map_parquet"
path = "src/cmd/map_parquet/main.rs"

[dependencies]
parquet = "56.1.0"
arrow = "56.1.0"
uuid = { version = "1.8", features = ["v4"] }
rand = { version = "0.9.2", features = ["std_rng"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
human_bytes = "0.4.3"
